@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-01-28T16:00:55Z",
+  "timestamp" : "2024-02-04T16:00:39Z",
   "count_outdated" : 73,
   "uniques_outdated" : 56,
-  "count" : 74,
-  "uniques" : 57,
+  "count" : 75,
+  "uniques" : 58,
   "clones" : [
     {
       "timestamp": "2024-01-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
